fix(create-survey): restore add-question alignment by resetting question block width

--- a/src/app/pages/create-survey/create-survey-page.scss
+++ b/src/app/pages/create-survey/create-survey-page.scss
@@ -459,7 +459,7 @@
 
 .question-block {
   margin-top: 0;
-  width: 100%;
+  width: min(713px, 100%);
   display: flex;
   flex-direction: column;
   gap: 10px;
